--- a/k-前端狂想录群的日常问题清单以及解决方案/狂想群分享的资料和连接.md
+++ b/k-前端狂想录群的日常问题清单以及解决方案/狂想群分享的资料和连接.md
@@ -7,3 +7,5 @@
 > [前端如何优雅的解耦](https://mp.weixin.qq.com/s/EsuR1ztDaaQaupdYh_C36g)
 
 > [Node.js调试之llnode篇](https://mp.weixin.qq.com/s/0ZhhnwUMAM6RA8xZbegcig)
+
+> [谷歌出了lit-element和lit-html](https://lit-element.polymer-project.org/)
