yk: update blog

--- a/k-前端狂想录群的日常问题清单以及解决方案/2020-02-下旬.md
+++ b/k-前端狂想录群的日常问题清单以及解决方案/2020-02-下旬.md
@@ -383,11 +383,73 @@ let x, y, z, m
 > https://segmentfault.com/q/1010000012346002
 
 
-## 24号
+## 25号
 
 ### NO1
 
 #### 问题描述
+不做前端和学历没有关系吧？
 
 #### 问题解决
+> 回答一
+
+我是入职后，第一天老大丢了本 `javascript` 的书让我看，从此入了前端，之前从来没接触过
+
+> 回答二
+
+我也是入职之后 老大丢了本 `React` 的书给我看
+
+> 回答三
+
+我去年实习，入职的时候，老大给我丢了本 `angular` ，然后那本书就在桌上吃灰了
+
+> 回答三
+
+我之前实习的时候，啥书也没丢，项目一半是 `angular` 写的，一半是 `vue` ，然后让我把 `an` 的部分重构成 `vue` ，然后就没有然后了
+
+> 回答四
+
+我是入职后，第一天老大丢了离职报告让我看，从此入了前端，之后再也没见到他了
+
+### NO2
+
+#### 问题描述
+
+请教各位大佬，开发一个 `js` 库的话，测试是放在 `build` 前，还是 `pre-commit` ，还是交给 `CI` 。
+
+#### 问题解答
+
+`ci` 好些。 `build` 和 `pre-commit` 都过于复杂了。
+
+
+### NO3
+
+#### 问题描述
+前端工程师有想创业的吗？
+
+#### 问题解答
+
+创业的话遵循一点就可以，那就是不要用自己的钱，尽可能的去找各种投资，来降低风险。因为创业失败了，对于投资方来说，没什么质的损失，但是如果你把家底都押进去了，你失败了，那对你来说，可就意味着很多事情。
+
+
+### NO4
+
+#### 问题描述
+
+`vue` 中 `window.location.href` ，为啥不跳转有遇到过的没？
+
+#### 问题解答
+// TODO:
+
+### NO4
+
+#### 问题描述
+
+`vue` 中 `window.location.href` ，为啥不跳转有遇到过的没？
+
+#### 问题解答
+
+> https://blog.csdn.net/weixin_39818813/article/details/79706274 
+
+
 
