--- a/前端狂想录的成长之路.md
+++ b/前端狂想录的成长之路.md
@@ -1,1 +1,57 @@
 
+# 各种小分队名字
+
+## 小程序小分队
+
+![](https://user-gold-cdn.xitu.io/2019/3/1/16937acd6d31ebbf?w=674&h=896&f=png&s=191433)
+
+## react 全家桶小分队
+
+![](https://user-gold-cdn.xitu.io/2019/3/1/169377c96b99bea5?w=674&h=896&f=png&s=195699)
+
+## Vue UI 小分队
+
+![](https://user-gold-cdn.xitu.io/2019/3/1/169377ca4f999de3?w=674&h=896&f=png&s=185504)
+
+## FP 小分队
+
+![](https://user-gold-cdn.xitu.io/2019/3/1/169377e7dd707980?w=674&h=896&f=png&s=164468)
+
+## node 中间件小分队
+
+![](https://user-gold-cdn.xitu.io/2019/3/1/16937a5f179f067f?w=674&h=896&f=png&s=170130)
+
+## node web 框架小分队
+
+![](https://user-gold-cdn.xitu.io/2019/3/1/16937ab050f27214?w=674&h=896&f=png&s=174057)
+
+## 重构小分队
+
+![](https://user-gold-cdn.xitu.io/2019/3/1/16937abc3c03dc94?w=674&h=896&f=png&s=169261)
+
+## node 微服务
+
+![](https://user-gold-cdn.xitu.io/2019/3/1/16937a617ca56a82?w=674&h=896&f=png&s=171202)
+
+## WebAssembly
+
+![](https://user-gold-cdn.xitu.io/2019/3/1/16937a669388e0c9?w=674&h=896&f=png&s=172562)
+
+## canvas
+
+![](https://user-gold-cdn.xitu.io/2019/3/1/16937a6b42f492a3?w=674&h=896&f=png&s=168816)
+
+## python
+
+![](https://user-gold-cdn.xitu.io/2019/3/1/16937ad2899c2656?w=674&h=896&f=png&s=186181)
+
+
+![](https://user-gold-cdn.xitu.io/2019/3/1/16937a6fb9352088?w=674&h=896&f=png&s=186181)
+
+## 前端人工智能
+
+![](https://user-gold-cdn.xitu.io/2019/3/1/16937a735bde28bd?w=674&h=896&f=png&s=173506)
+
+## WebGL 小分队
+
+![](https://user-gold-cdn.xitu.io/2019/3/1/16937a75c7520747?w=674&h=896&f=png&s=168456)
