--- a/前端狂想录的成长之路.md
+++ b/前端狂想录的成长之路.md
@@ -1,5 +1,40 @@
+今天很残酷，明天更残酷，但是后天很美好，但是大多数人死在了明天的晚上。
 
-# 各种小分队名字
+# 引言
+
+一个人做一个事情是很困难的，很多人坚持不下去，如果有很多人一起做一件事情，相互努力，相互帮忙，那一定是一件又开心又快乐的事情，而且很容易坚持下去，因为一起参与，当你想放弃的时候，总会有不同的人鼓励你，这就是我建了前端狂想录的目的。
+
+这是前端狂想录的一个里程碑，前端狂想录的小伙伴们，我希望大家可以一起努力，通过一起组织不同兴趣小组的形式，让大家可以参与到不同技术栈的学习和实践中，从而可以更快更好的提升自己的能力。
+
+# 标粗声明
+
+可能会有人问，组织者会不会有什么目的，这个我可以肯定的回答，本项目不存在任何盈利性的行为，请各位小伙伴放心和监督。
+
+当然肯定有很多其他目的，比如：
+
+- 组织者本人也会在这个过程中提升自己的能力(这实话实说)。
+- 大家也可以提示很多自己的技术水平。
+- 萍水相逢，一起交个朋友，缘分就这样续上了。
+- 分享业内优秀的知识和技术趋势。
+- 提高工作效率，增强技术上的自信心。
+- 开心的 `coding` 。
+- 提示能力，获得更多伯乐的青睐。
+
+
+# 内容
+
+我考虑了很多天，最后还是决定使用微信群的方式，前面想过用钉钉等，但是还是算了，没必要。就微信群吧，虽然群多了，但是只要质量高，也无妨，最重要的是你从群里学到了什么。
+
+下面我列出前端狂想录的一些微信群，这里直接扫码进群，但是有要求：
+
+第一：**不要加所有的群，按照之前投票的意愿加群，没有投票的请想一想你最想提升的技术是什么，只能加三个。**
+
+第二：**为了保证群的质量，针对一些加很多群的，我会观察的，如果在群里不做任何贡献或者参与的话，我会请出群的。**
+
+> PS：大群我不会这样做，潜水就潜水，没事，但是下面的这些群是要真正的做事情的，希望加群前认真考虑下。
+
+
+目前的群如下：
 
 ## 小程序小分队
 
@@ -11,7 +46,7 @@
 
 ## Vue UI 小分队
 
-![](https://user-gold-cdn.xitu.io/2019/3/1/169377ca4f999de3?w=674&h=896&f=png&s=185504)
+![](https://user-gold-cdn.xitu.io/2019/3/1/16937b4976f1ac8e?w=674&h=896&f=png&s=169840)
 
 ## FP 小分队
 
@@ -29,29 +64,34 @@
 
 ![](https://user-gold-cdn.xitu.io/2019/3/1/16937abc3c03dc94?w=674&h=896&f=png&s=169261)
 
-## node 微服务
+## Node 微服务小分队
 
 ![](https://user-gold-cdn.xitu.io/2019/3/1/16937a617ca56a82?w=674&h=896&f=png&s=171202)
 
-## WebAssembly
+## WebAssembly 小分队
 
 ![](https://user-gold-cdn.xitu.io/2019/3/1/16937a669388e0c9?w=674&h=896&f=png&s=172562)
 
-## canvas
+## Canvas 小分队
 
 ![](https://user-gold-cdn.xitu.io/2019/3/1/16937a6b42f492a3?w=674&h=896&f=png&s=168816)
 
-## python
+## Python 小分队
 
 ![](https://user-gold-cdn.xitu.io/2019/3/1/16937ad2899c2656?w=674&h=896&f=png&s=186181)
 
+## Go 小分队
 
-![](https://user-gold-cdn.xitu.io/2019/3/1/16937a6fb9352088?w=674&h=896&f=png&s=186181)
+![](https://user-gold-cdn.xitu.io/2019/3/1/16937b7116d97eb2?w=674&h=896&f=png&s=165334)
 
-## 前端人工智能
+## 前端人工智能小分队
 
 ![](https://user-gold-cdn.xitu.io/2019/3/1/16937a735bde28bd?w=674&h=896&f=png&s=173506)
 
 ## WebGL 小分队
 
 ![](https://user-gold-cdn.xitu.io/2019/3/1/16937a75c7520747?w=674&h=896&f=png&s=168456)
+
+## PWA 小分队
+
+![](https://user-gold-cdn.xitu.io/2019/3/1/16937bfca38499b7?w=674&h=896&f=png&s=180826)
