--- a/前端狂想录的成长之路.md
+++ b/前端狂想录的成长之路.md
@@ -20,9 +20,18 @@
 - 开心的 `coding` 。
 - 提示能力，获得更多伯乐的青睐。
 
-# 分享
+# 开始前的准备
 
-我已经有相关的微信公众号，和知乎专栏，以及公共的掘金账号。后期大家的成果，大家可以通过开源项目，博客或者分享会的形式，分享出去，这样也可以让更多的小伙伴知道我们的组织，然后说大点，就是为前端做出一些贡献吧。
+大致有以下准备
+
+第一个准备：知乎专栏，微信公众号，掘金公共账号已有。
+
+第二个准备：具体方向已有，目标明确。
+
+第三个准备：有一群志同道合的小伙伴。
+
+
+后期大家的成果，大家可以通过开源项目，博客或者分享会的形式，分享出去，会标注个人作者和署名的。这样也可以让更多的小伙伴知道我们的组织，然后说情怀上，就是为前端做出一些贡献吧。
 
 
 # 内容
