--- a/前端狂想录的成长之路.md
+++ b/前端狂想录的成长之路.md
@@ -1,5 +1,7 @@
 **今天很残酷，明天更残酷，但是后天很美好，但是大多数人死在了明天的晚上。**
 
+> 本文会持续更新最新内容
+
 # 引言
 
 一个人做一个事情是很困难的，很多人坚持不下去，如果有很多人一起做一件事情，相互努力，相互帮忙，那一定是一件又开心又快乐的事情，而且很容易坚持下去，因为一起参与，当你想放弃的时候，总会有不同的人鼓励你，这就是我建了前端狂想录的目的。
