--- a/前端狂想录的成长之路.md
+++ b/前端狂想录的成长之路.md
@@ -32,7 +32,9 @@
 
 第三个准备：`github` 组织已经建好，后续项目都放在组织里，没有加入组织的请私聊联系我。微信号：`jz1314521520`
 
-第三个准备：有一群志同道合的小伙伴。
+第四个准备：组织者会尽可能的提供技术上的资源和协助。
+
+最重要的准备：要有一群志同道合的小伙伴(嘻嘻)。
 
 
 后期大家的成果，大家可以通过开源项目，博客或者分享会的形式，分享出去，会标注个人作者和署名的。这样也可以让更多的小伙伴知道我们的组织，然后说情怀上，就是为前端做出一些贡献吧。
