--- a/k-前端狂想录群的日常问题清单以及解决方案/狂想群分享的资料和连接.md
+++ b/k-前端狂想录群的日常问题清单以及解决方案/狂想群分享的资料和连接.md
@@ -1,11 +1,24 @@
 ## 2019年2月分享合集
 
-> [盘点 Mac 上那些相见恨晚的软件](https://mp.weixin.qq.com/s/Cvqetqb1uHcqPU1B4xLuZw)
+- [盘点 Mac 上那些相见恨晚的软件](https://mp.weixin.qq.com/s/Cvqetqb1uHcqPU1B4xLuZw)
 
-> [node debugger相关知识](https://codeblog.dotsandbrackets.com/nodejs-core-dump-llnode-lldb/)
+-[node debugger相关知识](https://codeblog.dotsandbrackets.com/nodejs-core-dump-llnode-lldb/)
 
-> [前端如何优雅的解耦](https://mp.weixin.qq.com/s/EsuR1ztDaaQaupdYh_C36g)
+- [前端如何优雅的解耦](https://mp.weixin.qq.com/s/EsuR1ztDaaQaupdYh_C36g)
 
-> [Node.js调试之llnode篇](https://mp.weixin.qq.com/s/0ZhhnwUMAM6RA8xZbegcig)
+- [Node.js调试之llnode篇](https://mp.weixin.qq.com/s/0ZhhnwUMAM6RA8xZbegcig)
 
-> [谷歌出了lit-element和lit-html](https://lit-element.polymer-project.org/)
+
+- [谷歌出了lit-element和lit-html](https://lit-element.polymer-project.org/)
+
+> 自定义组件，`shadow DOM` 。基本上新版本都支持，`web component` 。如果浏览器原生支持了，那 `JSX` 都没什么用了，直接上模板字符串，不用编译。之前腾讯的当耐特写了个 `omi` ，也是基于 `web component`
+
+
+- [JavaScript深入之从ECMAScript规范解读this](https://github.com/mqyqingfeng/Blog/issues/7)
+
+> 从ecma规范讲this
+
+- [全屏HTML 5适配 个人见解](https://juejin.im/post/5c78c9f96fb9a04a0a5fe2b6?utm_source=wechat&from=singlemessage&isappinstalled=0)
+
+
+
