--- a/k-前端狂想录群的日常问题清单以及解决方案/狂想群分享的资料和连接.md
+++ b/k-前端狂想录群的日常问题清单以及解决方案/狂想群分享的资料和连接.md
@@ -2,7 +2,7 @@
 
 - [盘点 Mac 上那些相见恨晚的软件](https://mp.weixin.qq.com/s/Cvqetqb1uHcqPU1B4xLuZw)
 
--[node debugger相关知识](https://codeblog.dotsandbrackets.com/nodejs-core-dump-llnode-lldb/)
+- [node debugger相关知识](https://codeblog.dotsandbrackets.com/nodejs-core-dump-llnode-lldb/)
 
 - [前端如何优雅的解耦](https://mp.weixin.qq.com/s/EsuR1ztDaaQaupdYh_C36g)
 
@@ -20,5 +20,7 @@
 
 - [全屏HTML 5适配 个人见解](https://juejin.im/post/5c78c9f96fb9a04a0a5fe2b6?utm_source=wechat&from=singlemessage&isappinstalled=0)
 
+
+- [2018上半年掘金微信群日报优质文章合集：前端篇](https://juejin.im/post/5b3adfe2e51d4555b17e85df)
 
 
