--- a/前端狂想录所有小分队注意事项.md
+++ b/前端狂想录所有小分队注意事项.md
@@ -65,4 +65,10 @@
 通过分享，让更多的人知道，去参与进来，为前端贡献出微薄的力量。
 
 
+## 想参与的小伙伴请点击
+
+[前端狂想录的成长之路](https://github.com/godkun/blog/blob/master/%E5%89%8D%E7%AB%AF%E7%8B%82%E6%83%B3%E5%BD%95%E7%9A%84%E6%88%90%E9%95%BF%E4%B9%8B%E8%B7%AF.md)
+
+
+
 
