update questions & answers

--- a/k-前端狂想录群的日常问题清单以及解决方案/2019-03-上旬.md
+++ b/k-前端狂想录群的日常问题清单以及解决方案/2019-03-上旬.md
@@ -408,3 +408,26 @@ A？
 
 姬如雪
 js里的数组就是指针，你这样是让a和b指向同一块内存
+
+### NO8
+
+A？
+```
+function fun (n, o) {
+  console.log(o);
+  return {
+    fun: function (m) {
+      return fun(m, n);
+    }
+  }
+}
+
+var c = fun(0).fun(1);
+c.fun(2);
+c.fun(3);
+我有问题请教，var c = fun(0).fun(1); 这里怎么调用的？
+```
+
+#### 问题解答
+白熊
+fun(0)，第二个参没传，打印ubdefined,返回一个对象，有一个fun属性，然后点fun(1)就是调用这个fun属性，此时m是1，n是上次传的0，就是fun(1,0)，又返回一个对象(最后赋值给c)，有一个fun属性，之后的调用c.fun(x)，不管传什么，打印的都是最近一次调用fun函数时传进来的第一个参数，就是打印1
