Add questions and answers

--- a/k-前端狂想录群的日常问题清单以及解决方案/2019-03-上旬.md
+++ b/k-前端狂想录群的日常问题清单以及解决方案/2019-03-上旬.md
@@ -431,3 +431,282 @@ c.fun(3);
 #### 问题解答
 白熊
 fun(0)，第二个参没传，打印ubdefined,返回一个对象，有一个fun属性，然后点fun(1)就是调用这个fun属性，此时m是1，n是上次传的0，就是fun(1,0)，又返回一个对象(最后赋值给c)，有一个fun属性，之后的调用c.fun(x)，不管传什么，打印的都是最近一次调用fun函数时传进来的第一个参数，就是打印1
+
+### NO9
+
+#### 问题描述
+问个api， 我记得有一个api, 给出一个数字100，就能返回一个数组[0,1,2,3,.......99,100]
+
+#### 问题解答
+ChasLui
+Array.from({length:100}, (v,k) => k)
+
+### NO10
+
+#### 问题描述
+有没有写过Node.js的C++ Addons的大佬，macOS debug环境是用lldb还是cppvsbdg啊
+
+#### 问题解答
+吃圡死月不會碼代碼
+lldb 启动 node
+
+### NO11
+
+#### 问题描述
+宁柏龙
+大家是怎么避免 图片加载引起的回流的？
+
+#### 问题解答
+undefined
+提前占位，如果知道图片比例的话
+
+宁柏龙
+?怎么个张占法？抱一个宽度固定的盒子吗？
+
+. 
+图片路径后面带尺寸参数
+
+undefined
+padding-bottom占位
+
+宁柏龙
+@.这个不是很灵活吧？
+
+.
+看应用场景。绝对灵活性能没有那么好吧
+
+宁柏龙
+我在css里写了宽高，然后把netwrok模拟成3g，肉眼可以看到 图片先加载 再改变布局...
+
+王思远
+防止重排不管什么方式都需要知道图片的信息吧，不论是尺寸还是具体的宽高，否则一定会重排的吧？
+
+
+### NO12
+
+#### 问题描述
+
+路飞提问
+
+第一个问题：目前前端，存不存在一套完美的自适应方案，比如H5自适应这块。比如后面要来的方屏(华为)
+
+第二个问题：在缓存上，全栈级别的缓存是如何做的，前端缓存的难点在哪，有没有bp。
+
+第三个问题：能不能以一种通俗的角度去理解构造函数和对象互为实例这个结论。
+
+第四个问题：如何用派生类型去分析对象之间存在的原型关系。
+
+欢迎讨论，发表看法。
+
+
+### NO13
+
+#### 问题描述
+龙骑士-尹志平
+问一下大家，你们公司中，后台管理系统的权限是怎么实现的？完全有后台来控制还是前端来实现？
+
+#### 问题解答
+雪鹰
+我们的是后端控制的，有模块权限的
+
+ISXMG
+都要实现，前端根据权限数据动态注册菜单和路由，后端拦截控制api访问
+
+我要割麦子
+@龙骑士-尹志平 你可以了解下rbac和auth，两种权限管理系统的设计与实现
+
+龙骑士-尹志平
+我公司的后台管理系统是后台返给前端，前端取到对应的字段来判断显示与否
+
+我要割麦子
+这个都是在后端处理吧，前端没有数据源怎么知道显示？
+
+ChasLui
+@龙骑士-尹志平 可以参考下这篇文章 https://juejin.im/post/5c30c666518825261c1b7191
+
+我要割麦子
+这个是用rbac实现的
+
+
+### NO14
+
+#### 问题描述
+.
+有没有什么什么工具函数能比较两个对象并且返回差异的那部分？
+
+#### 问题解答
+QUJU
+http://ramda.cn/docs/#symmetricDifference @.，这个是比较数组的，我之前用过，对象的应该也好实现
+
+.
+我找到了这个，https://www.npmjs.com/package/diff
+
+A
+Lodash
+
+.
+我找了lodash没看到，数组就有，在写mongodb的增量更新
+
+路飞
+比较对象的，返回差异的。是浅比较还是深比较，可以尝试在一些源码库里搜一下对应的关键词，可以搜一下 value-equal.js，改一改就好了
+
+value-equal.js
+```
+var _typeof = typeof Symbol === "function" && typeof Symbol.iterator === "symbol" ? function (obj) { return typeof obj; } : function (obj) { return obj && typeof Symbol === "function" && obj.constructor === Symbol && obj !== Symbol.prototype ? "symbol" : typeof obj; };
+
+function valueEqual(a, b) {
+  if (a === b) return true;
+  if (a == null || b == null) return false;
+  if (Array.isArray(a)) {
+    return Array.isArray(b) && a.length === b.length && a.every(function (item, index) {
+      return valueEqual(item, b[index]);
+    });
+  }
+  var aType = typeof a === 'undefined' ? 'undefined' : _typeof(a);
+  var bType = typeof b === 'undefined' ? 'undefined' : _typeof(b);
+  if (aType !== bType) return false;
+  if (aType === 'object') {
+    var aValue = a.valueOf();
+    var bValue = b.valueOf();
+    if (aValue !== a || bValue !== b) return valueEqual(aValue, bValue);
+    var aKeys = Object.keys(a);
+    var bKeys = Object.keys(b);
+    if (aKeys.length !== bKeys.length) return false;
+    return aKeys.every(function (key) {
+      return valueEqual(a[key], b[key]);
+    });
+  }
+  return false;
+}
+export default valueEqual;
+```
+
+### NO15
+
+#### 问题描述
+Ng Ui-hua
+现在要让我加个请求错误跳转错误页，求支招，error的回调要写哪里呀
+
+#### 问题解答
+路飞
+@Ng Ui-hua 你或许可以对post动手，通过一层代理完成ajax。当然如果这种形式很确定，是不是可以写一个babel插件来转换一下。胡诌完毕。
+
+Ng Ui-hua
+写一层代理还是要对写在各个文件的post进行手动改动？写babel插件这么高端的工作我是做不来😂
+
+路飞
+@Ng Ui-hua babel插件不高端，你可以去看看开源的插件怎么玩的。照猫画虎可以的。当然还得考虑现实情况，看你心情吧。ctrl c ctrl v快乐了也可以
+
+
+### NO16
+
+#### 问题描述
+路飞
+突然想到一个问题，前端跨域，各种什么顶级域名不同不行，子域名不同不行。ip不同不行。那浏览器底层是通过一种方式进行判断的呢。字符串比较？正则？总不能死记硬背各种规则api
+
+#### 问题解答
+炫
+这个不是在浏览器判定的吧，好像在服务端吧？
+
+波比小金刚
+@炫 跨域是浏览器拦截的
+
+炫
+在浏览器的请求中，跨域是不是只在ajax这种异步请求中出现？
+
+.
+@炫 还有iframe，浏览器的同源策略了解一下
+
+炫
+正在看这方面内容
+前文提到的由 XMLHttpRequest 或 Fetch 发起的跨域 HTTP 请求。
+Web 字体 (CSS 中通过 @font-face 使用跨域字体资源), 因此，网站就可以发布 TrueType 字体资源，并只允许已授权网站进行跨站调用。
+WebGL 贴图
+使用 drawImage 将 Images/video 画面绘制到 canvas
+样式表（使用 CSSOM）
+
+
+### NO17
+
+#### 问题描述
+レイン
+大佬们，我们为啥引得是这个版本啊
+
+#### 问题解答
+.
+@レイン 因为webpack是基于node的模块打包工具，所以用common的比用esm的直接
+
+レイン
+嗯嗯 那我们为啥不用vue.runtime.common.js ？？？，不是说好了，我build的时候会自动把模版编译好的吗？为啥还要用完整版的构建，有这么多版本
+
+.
+因为你开发过程中他需要编译模板吧。最终打包进bundle里的应该只有runtime部分
+
+レイン
+开发过程中的编译是vue-loader做的还是vue做的？没看见哪里说最终打包进去的只有runtime啊
+
+Ng Ui-hua
+vue loader我记得是识别.vue文件
+
+.
+@レイン 会split，splitChunks，只打包进被用到的代码，如果生产环境只需要runtime部分的话，就只打包这一部分
+
+
+### NO18
+
+#### 问题描述
+狼
+大佬们，升级node的时候，报Error: invalid version 11.10.1，有什么办法处理吗
+
+#### 问题解答
+我的小羊在睡觉
+把电脑中的所有东西删干净，就是node的包
+
+undefined
+你是怎么安装的node?
+
+狼
+直接用命令升级，安装了一个n命令，然后n stable，@我的小羊在睡觉 要手动清除吗
+
+我的小羊在睡觉
+嗯，手动
+
+狼
+搞好了，谢谢
+
+
+### NO19
+
+#### 问题描述
+太阳当空照
+let a = [{id:1},{id:2}] 有没有很简单操作 可以从a得到 b=[1,2]
+
+#### 问题解答
+.
+a.map(item => item.id)
+
+
+### NO20
+
+#### 问题描述
+追梦人
+websocket连接被拒绝是什么原因？有人遇到过没
+
+#### 问题解答
+我要割麦子
+端口号开了吗？
+
+追梦人
+我写端口号了
+
+我要割麦子
+服务端的端口号呢？
+
+追梦人
+也写了
+
+我要割麦子
+你得看下服务端的这个端口号是空闲的吗，不是写不写的问题啊，是被占用的问题，你写的这个端口号可能在干别的事情
+
+追梦人
+昨天刚学的，不太理解，怎么看端口号又没又被占用
