--- a/前端狂想录的成长之路.md
+++ b/前端狂想录的成长之路.md
@@ -2,13 +2,13 @@
 
 > 本文会持续更新最新内容
 
-# 引言
+## 引言
 
 一个人做一个事情是很困难的，很多人坚持不下去，如果有很多人一起做一件事情，相互努力，相互帮忙，那一定是一件又开心又快乐的事情，而且很容易坚持下去，因为一起参与，当你想放弃的时候，总会有不同的人鼓励你，这就是我建了前端狂想录的目的。
 
 这是前端狂想录的一个里程碑，前端狂想录的小伙伴们，我希望大家可以一起努力，通过一起组织不同兴趣小组的形式，让大家可以参与到不同技术栈的学习和实践中，从而可以更快更好的提升自己的能力。
 
-# 标粗声明
+## 标粗声明
 
 可能会有人问，组织者会不会有什么目的，这个我可以肯定的回答，本项目不存在任何盈利性的行为，请各位小伙伴放心和监督。
 
@@ -22,7 +22,7 @@
 - 开心的 `coding` 。
 - 提示能力，获得更多伯乐的青睐。
 
-# 开始前的准备
+## 开始前的准备
 
 大致有以下准备
 
@@ -36,11 +36,9 @@
 
 最重要的准备：要有一群志同道合的小伙伴(嘻嘻)。
 
-
 后期大家的成果，大家可以通过开源项目，博客或者分享会的形式，分享出去，会标注个人作者和署名的。这样也可以让更多的小伙伴知道我们的组织，然后说情怀上，就是为前端做出一些贡献吧。
 
-
-# 内容
+## 内容
 
 我考虑了很多天，最后还是决定使用微信群的方式，前面想过用钉钉等，但是还是算了，没必要。就微信群吧，虽然群多了，但是只要质量高，也无妨，最重要的是你从群里学到了什么。
 
@@ -53,64 +51,35 @@
 > PS：大群我不会这样做，潜水就潜水，没事，但是下面的这些群是要真正的做事情的，希望加群前认真考虑下。
 
 
-目前的群如下：
+## 狂想录小分队各自首页
 
-## 小程序小分队
+总的首页：https://github.com/refactoring-now/X-Team
 
-![](https://user-gold-cdn.xitu.io/2019/3/1/16937acd6d31ebbf?w=674&h=896&f=png&s=191433)
+- [算法小分队](https://github.com/refactoring-now/X-Team/tree/master/%E7%AE%97%E6%B3%95%E5%B0%8F%E5%88%86%E9%98%9F%E7%9F%A5%E8%AF%86%E5%90%88%E9%9B%86) - 大佬坐镇
+- [fp小分队知识合集](https://github.com/refactoring-now/X-Team/tree/master/fp%E5%B0%8F%E5%88%86%E9%98%9F%E7%9F%A5%E8%AF%86%E5%90%88%E9%9B%86) - 大佬坐镇
+- [设计模式小分队知识合集](https://github.com/refactoring-now/X-Team/tree/master/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F%E5%B0%8F%E5%88%86%E9%98%9F%E7%9F%A5%E8%AF%86%E5%90%88%E9%9B%86) - 大佬坐镇
+- [重构小分队知识合集](https://github.com/refactoring-now/X-Team/tree/master/%E9%87%8D%E6%9E%84%E5%B0%8F%E5%88%86%E9%98%9F%E7%9F%A5%E8%AF%86%E5%90%88%E9%9B%86) - 大佬坐镇
+- [nodejs小分队知识合集](https://github.com/refactoring-now/X-Team/tree/master/nodejs%E5%B0%8F%E5%88%86%E9%98%9F%E7%9F%A5%E8%AF%86%E5%90%88%E9%9B%86) - 大佬坐镇
+- [flutter小分队知识合集](https://github.com/refactoring-now/X-Team/tree/master/flutter小分队知识合集) - 大佬坐镇
+- [源码终结小分队知识合集](https://github.com/refactoring-now/X-Team/tree/master/%E6%BA%90%E7%A0%81%E7%BB%88%E7%BB%93%E5%B0%8F%E5%88%86%E9%98%9F%E7%9F%A5%E8%AF%86%E5%90%88%E9%9B%86) - 大佬坐镇
+- [小程序小分队知识合集](https://github.com/refactoring-now/X-Team/tree/master/%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%B0%8F%E5%88%86%E9%98%9F%E7%9F%A5%E8%AF%86%E5%90%88%E9%9B%86) - 大佬坐镇
+- [react小分队知识合集](https://github.com/refactoring-now/X-Team/tree/master/react%E5%B0%8F%E5%88%86%E9%98%9F%E7%9F%A5%E8%AF%86%E5%90%88%E9%9B%86) - 大佬坐镇
+- [vue小分队知识合集](https://github.com/refactoring-now/X-Team/tree/master/vue%E5%B0%8F%E5%88%86%E9%98%9F%E7%9F%A5%E8%AF%86%E5%90%88%E9%9B%86) - 大佬坐镇
+- [图形编程小分队知识合集](https://github.com/refactoring-now/X-Team/tree/master/%E5%9B%BE%E5%BD%A2%E7%BC%96%E7%A8%8B%E5%B0%8F%E5%88%86%E9%98%9F%E7%9F%A5%E8%AF%86%E5%90%88%E9%9B%86) - 大佬坐镇
+- [端智能小分队知识合集](https://github.com/refactoring-now/X-Team/tree/master/%E7%AB%AF%E6%99%BA%E8%83%BD%E5%B0%8F%E5%88%86%E9%98%9F%E7%9F%A5%E8%AF%86%E5%90%88%E9%9B%86) - 大佬坐镇
+- [面试小分队知识合集](https://github.com/refactoring-now/X-Team/tree/master/%E9%9D%A2%E8%AF%95%E5%B0%8F%E5%88%86%E9%98%9F%E7%9F%A5%E8%AF%86%E5%90%88%E9%9B%86) - 大佬坐镇
+- [高效工具分享小分队知识合集](https://github.com/refactoring-now/X-Team/tree/master/高效工具分享小分队知识合集) - 大佬坐镇
+- [python小分队知识合集](https://github.com/refactoring-now/X-Team/tree/master/python%E5%B0%8F%E5%88%86%E9%98%9F%E7%9F%A5%E8%AF%86%E5%90%88%E9%9B%86) - 大佬坐镇
+- [pwa小分队知识合集](https://github.com/refactoring-now/X-Team/tree/master/pwa%E5%B0%8F%E5%88%86%E9%98%9F%E7%9F%A5%E8%AF%86%E5%90%88%E9%9B%86) - 大佬坐镇
+- [go小分队知识合集](https://github.com/refactoring-now/X-Team/tree/master/go%E5%B0%8F%E5%88%86%E9%98%9F%E7%9F%A5%E8%AF%86%E5%90%88%E9%9B%86) - 大佬坐镇
+- [webAssembly小分队知识合集](https://github.com/refactoring-now/X-Team/tree/master/webAssembly%E5%B0%8F%E5%88%86%E9%98%9F%E7%9F%A5%E8%AF%86%E5%90%88%E9%9B%86) - 大佬坐镇
 
-## react 全家桶小分队
 
-![](https://user-gold-cdn.xitu.io/2019/3/1/169377c96b99bea5?w=674&h=896&f=png&s=195699)
+## X-Team
 
-## Vue UI 小分队
+前端狂想录组织的首页：
 
-![](https://user-gold-cdn.xitu.io/2019/3/1/16937b4976f1ac8e?w=674&h=896&f=png&s=169840)
+[X-Team](https://github.com/refactoring-now/X-Team)
 
-## FP 小分队
 
-![](https://user-gold-cdn.xitu.io/2019/3/1/16937ea3234a39d6?w=674&h=896&f=png&s=164468)
 
-## node 中间件小分队
-
-![](https://user-gold-cdn.xitu.io/2019/3/1/16937a5f179f067f?w=674&h=896&f=png&s=170130)
-
-## node web 框架小分队
-
-![](https://user-gold-cdn.xitu.io/2019/3/1/16937ab050f27214?w=674&h=896&f=png&s=174057)
-
-## 重构小分队
-
-![](https://user-gold-cdn.xitu.io/2019/3/1/16937abc3c03dc94?w=674&h=896&f=png&s=169261)
-
-## Node 微服务小分队
-
-![](https://user-gold-cdn.xitu.io/2019/3/1/16937a617ca56a82?w=674&h=896&f=png&s=171202)
-
-## WebAssembly 小分队
-
-![](https://user-gold-cdn.xitu.io/2019/3/1/16937a669388e0c9?w=674&h=896&f=png&s=172562)
-
-## Canvas 小分队
-
-![](https://user-gold-cdn.xitu.io/2019/3/1/16937a6b42f492a3?w=674&h=896&f=png&s=168816)
-
-## Python 小分队
-
-![](https://user-gold-cdn.xitu.io/2019/3/1/16937ad2899c2656?w=674&h=896&f=png&s=186181)
-
-## Go 小分队
-
-![](https://user-gold-cdn.xitu.io/2019/3/1/16937b7116d97eb2?w=674&h=896&f=png&s=165334)
-
-## 前端人工智能小分队
-
-![](https://user-gold-cdn.xitu.io/2019/3/1/16937a735bde28bd?w=674&h=896&f=png&s=173506)
-
-## WebGL 小分队
-
-![](https://user-gold-cdn.xitu.io/2019/3/1/16937a75c7520747?w=674&h=896&f=png&s=168456)
-
-## PWA 小分队
-
-![](https://user-gold-cdn.xitu.io/2019/3/1/16937bfca38499b7?w=674&h=896&f=png&s=180826)
