Update Questions and answers

--- a/k-前端狂想录群的日常问题清单以及解决方案/2019-03-上旬.md
+++ b/k-前端狂想录群的日常问题清单以及解决方案/2019-03-上旬.md
@@ -710,3 +710,26 @@ websocket连接被拒绝是什么原因？有人遇到过没
 
 追梦人
 昨天刚学的，不太理解，怎么看端口号又没又被占用
+
+### NO21
+
+#### 问题描述
+追梦人
+有人知道js怎么解析二进制不？
+
+
+#### 问题解答
+林键燃
+明白。二进制文件的处理
+
+追梦人
+怎么运用到js中，我看了也能理解
+
+林键燃
+我做过一个应用场景是读取图片，然后上传给服务器，你需要一个具体的应用场景，比如移动端读取用户相册图片，压缩，上传
+
+追梦人
+那数据不是从后端读取过来的吗
+
+林键燃
+手机里的图片，是客户端，上传后，通过对应的 URI 就是访问到该图片。当然这张图片是被图片服务器正确处理的，使用 JS 的 FileReader 可以读取二进制大文件，然后就可以上传给服务器了
