--- a/k-前端狂想录群的日常问题清单以及解决方案/2019-03-中旬.md
+++ b/k-前端狂想录群的日常问题清单以及解决方案/2019-03-中旬.md
@@ -1,23 +1,16 @@
 ### NO1
 
 #### 问题描述
-林键燃
-for in 出来的 key 有必要重新检查一遍吗?
+for in 出来的 key 有必要重新检查一遍吗? 使用 for in 总是要用 hasOwnProperty 方法对每个 key 做一次校验？
 
 #### 问题解答
-断线人偶
-in的方式是会将原型链上的属性都枚举出来的，所以用hasOwnProperty来判断是否是自身的属性
+> 断线人偶：
 
-林键燃
-使用 for in 总是要用 hasOwnProperty 方法对每个 key 做一次校验？
-
-断线人偶
-这个要看你具体的使用场景了，也就是说是不是要区分是自己的属性还是原型链上的属性
+in的方式是会将原型链上的属性都枚举出来的，所以用hasOwnProperty来判断是否是自身的属性，校验这个要看你具体的使用场景了，也就是说是不是要区分是自己的属性还是原型链上的属性。
 
 ### NO2
 
 #### 问题描述
-Cloud
 .container{
   height: calc(100% - 40px);  //注：减号前后要有空格，否则很可能不生效！！
 }
@@ -26,68 +19,44 @@ Cloud
 为什么不用margin-top 或者padding-tap呢?
 
 #### 问题解答
-你在我的航线上
+> 你在我的航线上：
+
 因为移动端可能要内嵌app或者内嵌微信小程序，会有双页头情况出现，这时候很有可能就需要把原来的页面的页头去掉，如果用margin-top会有空出，目前碰到有这种逻辑，可能这个也是这个计算方式出现的原因之一
 
-Cloud
-嗯嗯   可以解决这种内嵌去掉原来页头的问题。我的页面h5页面带页头，内嵌到app里面，那这种是以我的页头为准还是app页面里面的页头 ？
+> Cloud：
 
-断线人偶
+嗯嗯，可以解决这种内嵌去掉原来页头的问题。我的页面h5页面带页头，内嵌到app里面，那这种是以我的页头为准还是app页面里面的页头？
+
+> 断线人偶：
+
 这个要看app端对webview的设置吧，你们说的页头是自己的dom还是指title的设置？
-
-96
-@你在我的航线上 如果头部是fixed呢？不设置padding top 不是会被盖住吗？
-
-你在我的航线上
-他这是要计算内容页的高度诶。。。
 
 
 ### NO3
 
 #### 问题描述
-未闻花名
-问下有谁知道，这个表格设置了下边框，重叠部分怎么去掉，我是给的tr的border。
-
+ios端禁止输入表情包的正则该怎么写啊= =
 
 #### 问题解答
-阿丽塔
-加个margin试试
+> 何呆呆：
 
-未闻花名
-还是没有任何反应
+百度知道，https://blog.csdn.net/liyujia6636/article/details/77600187
 
-何呆呆
-所以为什么要用table
-
-未闻花名
-说的也是哦
 
 ### NO4
 
 #### 问题描述
-快雪时晴
-ios端禁止输入表情包的正则该怎么写啊= =
+解释一下Nginx反向代理？在开发过程中如果前端配置了chrome支持跨域，就没必要用nginx了吧
 
 #### 问题解答
-何呆呆
-百度知道，https://blog.csdn.net/liyujia6636/article/details/77600187
+> 断线人偶：
 
-
-### NO5
-
-#### 问题描述
-简默、Xs
-解释一下Nginx反向代理
-
-#### 问题解答
-断线人偶
 就是你的请求还是发往自己的域，通过nginx进行转发到真正请求的地方
 
-简默、Xs
-在开发过程中如果前端配置了chrome支持跨域，就没必要用nginx了吧
+> ChasLui：
 
-ChasLui
 https://juejin.im/post/5c85a64d6fb9a04a0e2e038c?utm_source=gold_browser_extension#heading-10，看看
 
-Anx&
+> Anx&：
+
 服务端不存在同源策略，交给服务端去请求的意思
