--- a/前端狂想录的成长之路.md
+++ b/前端狂想录的成长之路.md
@@ -69,7 +69,7 @@
 - [端智能小分队知识合集](https://github.com/refactoring-now/X-Team/tree/master/%E7%AB%AF%E6%99%BA%E8%83%BD%E5%B0%8F%E5%88%86%E9%98%9F%E7%9F%A5%E8%AF%86%E5%90%88%E9%9B%86) - 大佬坐镇
 - [面试小分队知识合集](https://github.com/refactoring-now/X-Team/tree/master/%E9%9D%A2%E8%AF%95%E5%B0%8F%E5%88%86%E9%98%9F%E7%9F%A5%E8%AF%86%E5%90%88%E9%9B%86) - 大佬坐镇
 - [高效工具分享小分队知识合集](https://github.com/refactoring-now/X-Team/tree/master/高效工具分享小分队知识合集) - 大佬坐镇
-- [多语言编程小分队知识合集](https://github.com/refactoring-now/X-Team/tree/master/python%E5%B0%8F%E5%88%86%E9%98%9F%E7%9F%A5%E8%AF%86%E5%90%88%E9%9B%86) - 大佬坐镇
+- [多语言编程小分队知识合集](https://github.com/refactoring-now/X-Team/blob/master/%E5%A4%9A%E8%AF%AD%E8%A8%80%E7%BC%96%E7%A8%8B%E5%B0%8F%E5%88%86%E9%98%9F%E7%9F%A5%E8%AF%86%E5%90%88%E9%9B%86/README.md) - 大佬坐镇
 - [pwa小分队知识合集](https://github.com/refactoring-now/X-Team/tree/master/pwa%E5%B0%8F%E5%88%86%E9%98%9F%E7%9F%A5%E8%AF%86%E5%90%88%E9%9B%86) - 大佬坐镇
 - [webAssembly小分队知识合集](https://github.com/refactoring-now/X-Team/tree/master/webAssembly%E5%B0%8F%E5%88%86%E9%98%9F%E7%9F%A5%E8%AF%86%E5%90%88%E9%9B%86) - 大佬坐镇
 
