完成3月下旬问题

--- a/k-前端狂想录群的日常问题清单以及解决方案/2019-03-下旬.md
+++ b/k-前端狂想录群的日常问题清单以及解决方案/2019-03-下旬.md
@@ -9,6 +9,158 @@ vue 怎么让二级路由和三级路由走同一个 keep-alive
 ### NO2
 
 #### 问题描述
-
+各位大佬们，你们用的单元测试包是哪款呀？
 
 #### 问题解答
+
+使用 `jest` 集成 `enzyme` 做 `react` 单测很舒服。
+
+测试框架的比较可以点击下面链接：
+
+> https://stackshare.io/stackups/jasmine-vs-jest-vs-mocha
+
+
+### NO3
+
+#### 问题描述
+
+上传图片非常慢是什么原因丫？
+
+> 比如我们调用微信接口，同时上传最多八张图片，然后后台通过逻辑处理，包括图片和文字审核，审核图片是否违规。审核通过上传到服务器就很慢
+
+#### 问题解答
+
+压缩，采用异步上传，优化图片格式。
+
+
+### NO4
+
+#### 问题描述
+
+如何处理接口返回的 code , 有的接口没有 code ，有的接口有 code
+
+#### 问题解答
+
+用请求拦截器中统一处理。
+
+
+### NO5
+
+#### 问题描述
+
+![](https://user-gold-cdn.xitu.io/2019/6/12/16b4c32f7b81a11a?w=593&h=240&f=png&s=168789)
+
+如图所示，这种该怎么优化
+
+#### 问题解答
+
+1. 先解构赋值，然后使用 assign 
+
+> 优化这个事情，也是分优先级的。优先级最高的应该是鲁棒性和异常处理。
+
+
+### NO6
+
+#### 问题描述
+
+![](https://user-gold-cdn.xitu.io/2019/6/12/16b4c4613f6bc2b2?w=461&h=632&f=png&s=72897)
+
+如图所示，浅色和深色代表什么意识？
+
+#### 问题解答
+
+深色是可遍历的，浅色不可遍历。
+
+地址：
+
+> https://stackoverflow.com/questions/36535221/what-do-the-colors-mean-in-chrome-developer-tools-scope-panel
+
+
+### NO7
+
+#### 问题描述
+
+![](https://user-gold-cdn.xitu.io/2019/6/12/16b4c4aa57f8985a?w=474&h=708&f=png&s=242897)
+
+请教大佬们一个问题，在项目中，有必要把页面的请求单独拎出来吗？如果有，那能给解释一下吗？我是习惯在页面写请求。除了一些请求城市之类的功能拎出来
+
+#### 问题解答
+拎出来就是在解耦，而解耦是需要的。
+
+如果你觉得这些 `js` 命名等看起来不直观，这里你可以把这些 `js` 分一下类，比如几个 `js` 是属于上传类的，几个 `js` 是处理 `image` 的等，再通过创建一个对应功能的类，然后把这些请求挂载到实例的方法上。
+
+
+
+
+### NO7
+
+#### 问题描述
+![](https://user-gold-cdn.xitu.io/2019/6/12/16b4c528beb183b7?w=1674&h=240&f=png&s=86006)
+
+客户端注入 `runtime` ，怎么理解 `runtime` ？
+
+#### 问题解答
+
+1. 运行时可以理解成不是你写，但是是维持你代码正确运行所必须的代码（JS 引擎的代码、依赖库的代码等。
+2. 离开了runtime 你写的那些代码就是一坨文本
+
+
+
+### NO8
+
+#### 问题描述
+
+![](https://user-gold-cdn.xitu.io/2019/6/12/16b4c56c8c6d44c8?w=874&h=128&f=png&s=36268)
+
+这种交互展示当天+7个自然日 这种交互怎么实现？ 哪位大佬指点下。前端实现当天然后再加7个自然日
+
+#### 问题解答
+
+抛开平年闰年大月小月，timestamp 是不受规则影响的，就是毫秒数。不用去考虑那么复杂，通通时间戳就解决了。
+
+
+### NO9
+
+#### 问题描述
+
+generator yield 和 async await 的区别和应用场景有什么不同？
+
+#### 问题解答
+
+如果玩过 dva的同学应该知道 在 dva的写法中用到的是 yield
+
+如图所示：
+
+![](https://user-gold-cdn.xitu.io/2019/6/12/16b4c5a7e2f044f2?w=2134&h=988&f=png&s=238699)
+
+想一个问题，这段代码，为什么没有用await ，大家可以想一想。想通这个，就知道上面的区别了
+
+
+### NO10
+
+#### 问题描述
+
+有没有大佬用过canvas的库，可以实现比如用户点击画图的？
+有那种能响应事件的吗，比如我点了四个点，就生成一个四边形
+
+#### 问题解答
+
+pixijs
+
+
+### NO11
+
+#### 问题描述
+哪位大佬做过H5页面，点页面里的分享按钮，能直接打开分享页面，而不用点击右上角 三个点
+
+#### 问题解答
+这种劫持按钮的api一般都会有域名限制，他们内部都会针对每个api维护白名单。所以就算知道怎么用也不一定可以用
+
+### NO12
+
+
+#### 问题描述
+大家有用过这样的vue组件吗？日历组件，上下要有倾斜的幅度的
+
+#### 问题解答
+weixin147CY  此哥们写过一个这种组件。请联系他微信号
