--- a/k-前端狂想录群的日常问题清单以及解决方案/2019-04-上旬.md
+++ b/k-前端狂想录群的日常问题清单以及解决方案/2019-04-上旬.md
@@ -1,14 +1,36 @@
 ### NO1
 
+
 #### 问题描述
-vue 怎么让二级路由和三级路由走同一个 keep-alive
+为啥我用nuxt，第一次进入这个页面可以请求到数据，刷新这个页面，就白屏呢？
 
 #### 问题解答
-无法走同一个 keep-alive
+weixin147CY  此哥们写过一个这种组件。请联系他微信号
 
 ### NO2
 
-#### 问题描述
 
+#### 问题描述
+大家有用过这样的vue组件吗？日历组件，上下要有倾斜的幅度的
 
 #### 问题解答
+weixin147CY  此哥们写过一个这种组件。请联系他微信号
+
+
+### NO3
+
+
+#### 问题描述
+大家有用过这样的vue组件吗？日历组件，上下要有倾斜的幅度的
+
+#### 问题解答
+weixin147CY  此哥们写过一个这种组件。请联系他微信号
+
+### NO4
+
+
+#### 问题描述
+大家有用过这样的vue组件吗？日历组件，上下要有倾斜的幅度的
+
+#### 问题解答
+weixin147CY  此哥们写过一个这种组件。请联系他微信号
