--- a/k-前端狂想录群的日常问题清单以及解决方案/狂想群分享的资料和连接.md
+++ b/k-前端狂想录群的日常问题清单以及解决方案/狂想群分享的资料和连接.md
@@ -1,4 +1,4 @@
-## 2019年2月分享合集
+****## 2019年2月分享合集
 
 - [盘点 Mac 上那些相见恨晚的软件](https://mp.weixin.qq.com/s/Cvqetqb1uHcqPU1B4xLuZw)
 
@@ -42,3 +42,14 @@
 - [2019年大前端技术趋势深度解读](https://mp.weixin.qq.com/s/WWqsd-SnILUWbiKEnSArDQ)
 
 - 各种评测，比如 jest vs mocha：https://stackshare.io/stackups/trending
+
+
+- [jasmine-vs-jest-mocha](https://stackshare.io/stackups/jasmine-vs-jest-vs-mocha)
+
+- 程序员鄙视链图片
+
+![](https://user-gold-cdn.xitu.io/2019/6/12/16b4b1e4d989155f?w=500&h=1105&f=png&s=195480)
+
+- url的真谛
+
+![](https://user-gold-cdn.xitu.io/2019/6/12/16b4b22127706d03?w=1622&h=964&f=png&s=105412)
